# ShowMeme

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
scripts/: test.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/cache/: memory-manager.ts  thumbnail-cache.ts
src/lib/components/: DirectorySelector.svelte
src/lib/components/Filters/: SearchBar.svelte  TagFilter.svelte
src/lib/components/Grid/: ImageCard.svelte  ImageGrid.svelte  VirtualGrid.svelte
src/lib/components/Lightbox/: Lightbox.svelte
src/lib/components/List/: ImageList.svelte
src/lib/components/Tags/: TagInput.svelte  TagManager.svelte
src/lib/components/UI/: Button.svelte  Card.svelte  Dropdown.svelte  Toast.svelte
src/lib/config/: constants.ts
src/lib/db/: images.test.ts  images.ts  schema.ts  tags.test.ts  tags.ts
src/lib/fs/: directory-handle.ts  fallback.ts  scanner.test.ts  scanner.ts
src/lib/stores/: directory.ts  filters.test.ts  filters.ts  notifications.ts  preferences.ts
src/lib/utils/: click-outside.ts  file-watcher.ts  format.ts  image-loader.ts  random.test.ts  random.ts  tauri-helpers.ts  thumbnail-queue.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/list/: +page.svelte
src/routes/settings/: +page.svelte
src/test/: setup.ts
static/: manifest.json
